# mcserverkit

./: CMakeLists.txt  LICENSE  README.md  go.mod  mcserverkit.go
.github/workflows/: RELEASE.yml
bind/: c.go
bindings/c/: main.go
bindings/rust/: Cargo.toml  build.rs
bindings/rust/src/: lib.rs
core/: config.go  create.go  install.go  start.go  utils.go
internal/: config.go  utils.go
src/: create.go  install.go  main.go
